--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
@@ -18,6 +21,10 @@ section {
     flex-direction: column;
     align-items: center;
     padding: 125px 100px;
+}
+
+#register ,#benefits, #function, #plans, #we{
+    font-family: 'Fjalla One', sans-serif;
 }
 
 .background-image {
